# MyWebSite

./: .gitignore  Cargo.toml  README.en.md  README.md  README.ru.md
src/: database.rs  handlers.rs  lib.rs  main.rs  models.rs  routes.rs
static/: script.js  style.css
templates/: index.html
test1/test1/: settings.py
